# opensoc

./: .gitignore  00-setup_nemo_agent_toolkit.sh  Dockerfile-nemo_agent_toolkit  README.md  create_agent_tables.sql  docker-compose.yml  docker-compose_nemo_agent_toolkit.yml  nat_execution_service.py  package-lock.json  package.json  run_nat-mcp_test.sh  run_nat_example.sh  run_nat_test-virustotal-quick.sh  run_nat_test-virustotal.sh  setup_database.sh  setup_ollama.md  start.sh  start_nat.sh  stop_nat.sh
my-agents/open-soc/: aiqtoolkit_open-soc.md  create_new_agent.md  pyproject.toml
my-agents/open-soc/configs/: config.yml
my-agents/open-soc/data/: benign_security_fallback_data.json  offline_security_data.csv
my-agents/open-soc/src/open_soc/: __init__.py  open_soc_function.py  register.py
my-agents/open-soc/src/open_soc.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
my-agents/open-soc/src/open_soc/agent_automation_specialist/: __init__.py  orchestration_coordinator.py  script_generator.py  takedown_specialist.py
my-agents/open-soc/src/open_soc/agent_ioc_specialist/: __init__.py  ioc_analyzer.py  virustotal_analyzer.py
my-agents/open-soc/src/open_soc/agent_log_analysis/: __init__.py  soc_log_analyzer.py
my-agents/open-soc/src/open_soc/agent_playbook_specialist/: __init__.py  playbook_specialist.py
my-agents/open-soc/src/open_soc/agent_response_specialist/: __init__.py  incident_response_planner.py
my-agents/open-soc/src/open_soc/agent_threat_intel_specialist/: __init__.py  threat_hunting_specialist.py  (+1 more)
(+577 files in other folders)
